Corrected issue with horizontal scroll by adding overflow hidden to maxwidthwrapper

--- a/css/styles.css
+++ b/css/styles.css
@@ -8,18 +8,27 @@
 }
 
 html {
-  height: 100%;
+    border: 0;
+    margin: 0;
+    padding: 0;
+    height: 100%;
 }
 
 body {
-  font-family: 'Space Grotesk', sans-serif;
-  height: 100%;
-  margin: 0;
+    background-color: #151515;
+    font-family: 'Space Grotesk', sans-serif;
+    min-height: 100%;
+    margin: 0;   
 }
 
 .max-width-wrapper {
   min-height: 100%; 
-  background-color: #151515;
+  max-width: 1440px;
+  /* Overflow: hidden hides the excess portions of the decorative elements so there isn't a 
+  horizontal scrollbar, plus make sure margin is 0 so displays to the edge */
+  overflow: hidden;
+  margin: 0;
+  
  } 
 
 figure {
@@ -31,8 +40,13 @@ figure {
 header {
     display: flex;
     align-items: center;
-    flex-flow: column wrap;
+    flex-flow: column wrap;  
+}
+
+.header-image-container {
     position: relative;
+    width: 375px;
+    height: 383px;
 }
 
 .nav-container {
@@ -73,9 +87,10 @@ header {
 /**************************************************/
 /* Primary image */
 .image-selfie {
-    position: relative;
+    position: absolute;
     width: 174px;
     height: 383px;
+    left: 101px;
 }
 
 .image-selfie img {
@@ -97,7 +112,7 @@ header {
     height: 129px;
     width: 129px;
     top: 254px;
-    left: 311px;
+    right: -65px;
 }
 /**************************************************/
 /* Header message - Mobile */
@@ -505,7 +520,7 @@ footer p {
         align-self: flex-start;
         height: 449px;
         width: 443px;
-        margin-top: -384px;
+        margin-top: -450px;
         margin-left: 32px;
     }
 
@@ -541,8 +556,8 @@ footer p {
     /* container for positioned images */
     .header-image-container {
         position: relative;
-        min-width: 768px; 
-        min-height: 534px; 
+        width: 768px; 
+        height: 600px; 
     }
 
     .header-oval {
@@ -570,7 +585,9 @@ footer p {
         height: 600px;
         top: 0;
         right: 0;
+        left: unset;
     }
+    
 
     /* This changes the image to tablet size */
     #selfie {
@@ -580,6 +597,7 @@ footer p {
     .contact-link-header {
         align-self: flex-start;
         margin-left: 32px;
+        margin-top: -35px;
     }
     
     .contact-me-link {
@@ -781,9 +799,12 @@ footer p {
     header {
         height: 720px;
     }
+    .nav-links-container {
+        margin-right: 20px;
+    }
 
     .nav-container {
-        min-width: 1082px;
+        min-width: 1100px;
     }
     
     .nav-name {
